# project-tg-token

./: .env.example  .env.prod.template  .gitignore  CLAUDE.md  COST_BREAKDOWN.md  Dockerfile  IMPROVED_ARCHITECTURE.md  LEARNING_PATH.md  Makefile  OWNER TG IDS 1598057702.env  README.md  RE_ANALYSIS.md  RUNBOOK.md  architecture.html  architecture_v2.html  architecture_v3.html  deploy.prod.sh  deploy.sh  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: check-tg-token-logs.yml  deploy-tg-token.yml  test.yml  tg-token-check-gate.yml  tg-token-clear-user.yml  tg-token-db-admin.yml  tg-token-flip-mainnet.yml  tg-token-update-gate.yml
app/: __init__.py  __main__.py  api.py  balance_gate.py  bot.py  db.py  dust_watcher.py  gates.py  logging_conf.py  pricing.py  purge.py  redis_store.py  settings.py  setup_wizard.py
app/auth/: address.py  dust.py  initdata.py  siwe.py  siwe_parse.py
app/chains/: evm.py  solana.py  ton.py
app/models/: __init__.py  chat.py  dust_request.py  event.py  gate.py  token_gate.py  verification.py  whitelist.py
infra/: Caddyfile.gatekept  docker-compose.prod.yml  docker-compose.yml
infra/systemd/: tg-token-api.service  tg-token-bot.service  tg-token-verifier.service
landing/: aurora.html  index.html  package-lock.json  package.json  tsconfig.json
landing/src/: App.tsx  index.css
tests/: conftest.py
tests/integration/: test_bot_api.py  (+2 more)
webapp/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webapp_verifier/: package-lock.json  package.json  tsconfig.json
(+52 files in other folders)
